--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -10,14 +10,13 @@
     <h1>Inscription</h1>
 
          {{ form_start(registrationForm) }}
-              {{ form_row(registrationForm.username) }}
-        {{ form_row(registrationForm.name) }}
-        {{ form_row(registrationForm.firstname) }}
-
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
+              {{ form_widget(registrationForm.username) }}
+        {{ form_widget(registrationForm.lastname) }}
+        {{ form_widget(registrationForm.firstname) }} 
+{{ form_widget(registrationForm.phone) }}
+{{ form_widget(registrationForm.address) }}
+        {{ form_widget(registrationForm.email) }}
+        {{ form_widget(registrationForm.plainPassword) }} 
         {# {{ form_row(registrationForm.agreeTerms) }} #}
 
         <button type="submit" class="btn btn-primary">Register</button>
