--- a/templates/Partial/_navBar.twig
+++ b/templates/Partial/_navBar.twig
@@ -1,7 +1,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-2">
   <div class="container-fluid">
-    <a class="navbar-brand" href="{{ path("home")}}"><img src="/image/Vert Foncé Diamant Technologie de Pointe Informatique Logo.png" alt="" style="width: 100px; height:100px"></a>
+    <a class="navbar-brand" href="{{ path("home")}}"><img src="upload/Vert Foncé Diamant Technologie de Pointe Informatique Logo.png" alt="" style="width: 100px; height:100px"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -12,12 +12,7 @@
           <a class="nav-link active" href="{{ path('home') }}">Accueil
           </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link " href="{{ path('product_index') }}">Item</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ path('category_index') }}">Category</a>
-        </li>
+
 
         {% if is_granted("ROLE_ADMIN") == true %}
         <li class="nav-item">
@@ -35,11 +30,8 @@
         </li>
          {% endif %}
                  {% if is_granted("ROLE_USER") == false %}
-               <li class="nav-item">
-          <a class="nav-link  m-2" href="{{ path('app_register') }}">Inscription</a>
-        </li>
         <li class="nav-item">
-          <a class="nav-link  m-2 " href="{{ path('app_login') }}">Login</a>
+          <a class="nav-link  btn my-2 my-sm-0 text-black" href="{{ path('app_login') }}"><i class="fa-solid fa-user-astronaut fa-3x"></i></a>
         </li>
         {% endif %}
       
