--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -6,19 +6,29 @@
     {% for flashError in app.flashes('verify_email_error') %}
         <div class="alert alert-danger" role="alert">{{ flashError }}</div>
     {% endfor %}
-
-    <h1>Inscription</h1>
+<div class="container register">
+    <h1 class="h1-top">CRÉATION DE COMPTE</h1>
 
          {{ form_start(registrationForm) }}
-              {{ form_widget(registrationForm.username) }}
+         <br><br>
+        {{ form_widget(registrationForm.username) }}
+          <br><br>
         {{ form_widget(registrationForm.lastname) }}
+          <br><br>
         {{ form_widget(registrationForm.firstname) }} 
-{{ form_widget(registrationForm.phone) }}
-{{ form_widget(registrationForm.address) }}
+          <br><br>
+        {{ form_widget(registrationForm.phone) }}
+          <br><br>
+        {{ form_widget(registrationForm.address) }}
+          <br><br>
         {{ form_widget(registrationForm.email) }}
+          <br><br>
         {{ form_widget(registrationForm.plainPassword) }} 
+          <br><br>
         {# {{ form_row(registrationForm.agreeTerms) }} #}
-
-        <button type="submit" class="btn btn-primary">Register</button>
+<div class="container_register_btn "><button type="submit" class="btn btn-primary register_btn btn-lg">VALIDER</button></div>
+        
     {{ form_end(registrationForm) }}
+</div>
+
 {% endblock %}
