--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,5 +1,6 @@
 {% extends 'base.html.twig' %}
 
+
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
@@ -13,8 +14,8 @@
             You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
         </div>
     {% endif %}
-
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+<div class="container  loggin ">
+    <h1 class="h1-top" >IDENTIFIEZ-VOUS :</h1>
     <label for="inputEmail">Email</label>
     <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
     <label for="inputPassword">Password</label>
@@ -24,19 +25,22 @@
            value="{{ csrf_token('authenticate') }}"
     >
 
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
-
-        <div class="checkbox mb-3">
+        <div class="checkbox mb-3 checkboxx">
+<a href="{{ path("app_forgot_password_request")}}">Vous avez oublié votre mot de passe ?</a>
             <label>
                 <input type="checkbox" name="_remember_me"> Remember me
             </label>
         </div>
-    #}
+    
 
     <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
+        connexion
     </button>
-</form>
+     <h2 class="h1-top">NOUVEAU CLIENT ?</h2>
+        <a class="btn btn-lg btn-primary" href="{{ path('app_register') }}">Créez un compte</a>
+
+    </div>
+    
+   </form>
 {% endblock %}
+
