--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
    {# hearder #}
-   <header id="header"class="">
+   <header id="header">
  <div id="carouselExampleIndicators"class="carousel slide"data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button
