--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -28,7 +28,8 @@
         <div class="checkbox mb-3 checkboxx">
 <a href="{{ path("app_forgot_password_request")}}">Vous avez oublié votre mot de passe ?</a>
             <label>
-                <input type="checkbox" name="_remember_me"> Remember me
+                <input type="checkbox" name="_remember_me"> Rester connecté
+
             </label>
         </div>
     
