--- a/templates/Partial/_navBar.twig
+++ b/templates/Partial/_navBar.twig
@@ -1,7 +1,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-2">
   <div class="container-fluid">
-    <a class="navbar-brand" href="{{ path("home")}}"><img src="upload/Vert Foncé Diamant Technologie de Pointe Informatique Logo.png" alt="" style="width: 100px; height:100px"></a>
+    <a class="navbar-brand" href="{{ path("home")}}"><img src="/upload/Vert Foncé Diamant Technologie de Pointe Informatique Logo.png" alt="" style="width: 100px; height:100px"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -9,14 +9,14 @@
     <div class="collapse navbar-collapse" id="navbarColor03">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="{{ path('home') }}">Accueil
+          <a class="nav-link active btn btn-lg my-2 " href="{{ path('home') }}">Accueil
           </a>
         </li>
 
 
         {% if is_granted("ROLE_ADMIN") == true %}
         <li class="nav-item">
-          <a class="nav-link" href="{{ path('admin_index') }}">admin</a>
+          <a class="nav-link btn btn-lg btn-danger my-2" href="{{ path('admin_index') }}">admin</a>
         </li>
         {% endif %}
       </ul>
@@ -26,7 +26,7 @@
   
         {% if is_granted("ROLE_USER") == true %}
            <li class="nav-item">
-          <a class="nav-link  mt-2" href="{{ path('app_logout') }}">Logout</a>
+          <a class="nav-link btn btn-lg btn-info mt-2" href="{{ path('app_logout') }}">Déconnexion</a>
         </li>
          {% endif %}
                  {% if is_granted("ROLE_USER") == false %}
