--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,29 +1,46 @@
-
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--font-awesome CDN -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- Bootstrap CSS -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet" >
-       <!-- Custom CSS   -->
-    <link rel="stylesheet" href="/css/main.css">
-    {% block stylesheets %}{% endblock %}
+	<head>
+		<!-- Required meta tags -->
+		<meta charset="utf-8">
+		<meta
+		name="viewport" content="width=device-width, initial-scale=1">
+		<!--font-awesome CDN -->
+		<link
+		rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+		<!-- Bootstrap CSS -->
+		<link
+		href="/css/bootstrap.min.css" rel="stylesheet">
+		<!-- Custom CSS   -->
+		<link rel="stylesheet" href="/css/main.css">
+		<link rel="stylesheet" href="/css/product.css"> {% block stylesheets %}{% endblock %}
+		<style>
+			.grid {
+				display: grid;
+				grid-template-columns: repeat(3, 1fr);
+				grid-gap: 20px;
+			}
+			.filter {
+				display: block;
+				position: sticky;
+				top: 20px;
+			}
+		</style>
 
-   <title>{% block title %}{% endblock %}</title>
-  </head>
-  <body>
-   {% include 'Partial/_navBar.twig' %}
- {% block body %}{% endblock %}
+		<title>
+			{% block title %}{% endblock %}
+		</title>
+	</head>
+	<body>
+		{% include 'Partial/_navBar.twig' %}
+		{% block body %}{% endblock %}
 
-          <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <!-- Bootstrap CSS -->
-    <script src="/js/jquery-3.60.js"></script>
-          {% block javascripts %}{% endblock %}
 
-  </body>
+		<!-- Bootstrap JS -->
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+		<!-- Bootstrap CSS -->
+		<script src="/js/jquery-3.60.js"></script>
+		{% block javascripts %}{% endblock %}
+
+	</body>
 </html>
