--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,7 +17,7 @@
 		<style>
 			.grid {
 				display: grid;
-				grid-template-columns: repeat(3, 1fr);
+				grid-template-columns: repeat(5, 1fr);
 				grid-gap: 20px;
 			}
 			.filter {
@@ -25,6 +25,14 @@
 				position: sticky;
 				top: 20px;
 			}
+			a,
+			a:hover {
+
+				color: black;
+
+				text-decoration: none; /* no underline */
+			}
+			</head> </html>
 		</style>
 
 		<title>
@@ -41,6 +49,5 @@
 		<!-- Bootstrap CSS -->
 		<script src="/js/jquery-3.60.js"></script>
 		{% block javascripts %}{% endblock %}
-
 	</body>
 </html>
