--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -6,12 +6,13 @@
 {% block body %}
 	<div class="container ">
 		<div class="row">
-			<div class="col-md-3">
+			<div class="col-md-3 mt-5">
 
 				{% include 'product/_filter.html.twig' with {form:form} only%}
 			</div>
-			<div class="col-md-9">
-				<div class="grid">
+			<div class="col-md-12">
+				<div class="grid mt-5">
+
 					{% for product in products %}
 						{% include 'product/_card.html.twig' with {product:product} only%}
 					{% endfor %}
