--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -94,9 +94,13 @@
 			</div>
 		</section>
 		<h2 class="h1-top mt-5" style=" font-size: 2.5rem;">NOUVEAUTÉS</h2>
-		<section>
-			<div class="container">
-				<div class="col-md-12">
+		<section class="mb-5">
+
+
+			<div class="container ">
+
+				<div class="col-md-12 ">
+
 					<div class="grid mt-5 " style="width: 85rem;">
 
 
