--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<meta
 		name="viewport" content="width=device-width, initial-scale=1">
-		<!--font-awesome CDN -->
+		<!-- foot  -->
 		<link
 		rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 		<!-- Bootstrap CSS -->
@@ -32,7 +32,21 @@
 
 				text-decoration: none; /* no underline */
 			}
-			</head> </html>
+			.fa-bag-shopping {
+
+				color: blue;
+			}
+			html {
+				position: relative;
+				min-height: 100%;
+			}
+
+			footer {
+				position: absolute;
+				bottom: -160px;
+				width: 100%;
+
+			}
 		</style>
 
 		<title>
@@ -42,12 +56,14 @@
 	<body>
 		{% include 'Partial/_navBar.twig' %}
 		{% block body %}{% endblock %}
-
+		{% include '/Partial/_footerBar.twig' %}
 
 		<!-- Bootstrap JS -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 		<!-- Bootstrap CSS -->
 		<script src="/js/jquery-3.60.js"></script>
 		{% block javascripts %}{% endblock %}
+
 	</body>
 </html>
