--- a/templates/product/_card.html.twig
+++ b/templates/product/_card.html.twig
@@ -1,17 +1,27 @@
 <div class="card">
+
 	<img src="/upload/images/products/{{product.file}}" alt="" class="card-img-top">
 	<div class="card-body">
-		<h5 class="card-title text-center fw-bold fs-3">{{product.name}}</h5>
+		<h5 class="card-title text-center  fs-3">
+			<a href="{{ path('product_show', {'id': product.id}) }}">{{product.name}}</a>
 
 
-		<div class="card-title text-primary" style="font-weight: bold; font-size: 1.5rem;">
+		</h5>
+
+
+		<div class="card-title text-primary d-flex justify-content-between  align-items-center mt-3" style="font-weight: bold; font-size: 1.3rem;">
+
+
 			{{product.price/100 | number_format(0, ',', '')}}
 			€
 			{% if product.reduct%}
 				<div class="text text-warning">
 					Promo !</div>
 			{% endif %}
+			<a class="shop-btn" href="">
+				<i class="fa-solid fa-bag-shopping fa-2x"></i>
+			</a>
 		</div>
-		<p class="text text-muted">{{product.description}}</p>
+
 	</div>
 </div>
