--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -4,6 +4,9 @@
 {% endblock %}
 
 {% block body %}
+	<pre>
+	{{ dump(products) }}
+</pre>
 	<div class="container ">
 		<div class="row">
 			<div class="col-md-3 mt-5">
