--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -1,39 +1,29 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Product{% endblock %}
-
 {% block body %}
-    <h1>Product</h1>
-    
+	<div class="container">
+		<h1 class="">{{product.name}}</h1>
+		<img src="/upload/images/products/{{product.file}}" style="width:300px;height: 300px;" alt="" class="card-img-top">
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ product.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ product.name }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ product.description }}</td>
-            </tr>
-            <tr>
-                <th>Price</th>
-                <td>{{ product.price }}</td>
-            </tr>
-            <tr>
-                <th>Reduct</th>
-                <td>{{ product.reduct }}</td>
-            </tr>
-        </tbody>
-    </table>
+		<div class="container">
+			<h1 class="">{{product.price}}</h1>
 
-    <a class="btn btn-light m-2" href="{{ path('product_index') }}">back to list</a><br>
+		</div>
 
-    <a class="btn btn-dark m-2" href="{{ path('product_edit', {'id': product.id}) }}">edit</a>
 
-    {{ include('product/_delete_form.html.twig') }}
+	</div>
+	<nav>
+		<div class="nav nav-tabs" id="nav-tab" role="tablist">
+			<button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">DESCRIPTIF</button>
+
+			<button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Profile</button>
+			<button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Contact</button>
+		</div>
+	</nav>
+	<div class="tab-content" id="nav-tabContent">
+		<div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">...</div>
+		<div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">...</div>
+		<div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">...</div>
+	</div>
+
 {% endblock %}
