--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,47 +1,47 @@
 {% extends 'base.html.twig' %}
 
 
-{% block title %}Log in!{% endblock %}
-
-{% block body %}
-<form method="post">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
-
-    {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
-        </div>
-    {% endif %}
-<div class="container  loggin ">
-    <h1 class="h1-top" >IDENTIFIEZ-VOUS :</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
-
-        <div class="checkbox mb-3 checkboxx">
-<a href="{{ path("app_forgot_password_request")}}">Vous avez oublié votre mot de passe ?</a>
-            <label>
-                <input type="checkbox" name="_remember_me"> Rester connecté
-
-            </label>
-        </div>
-    
-
-    <button class="btn btn-lg btn-primary" type="submit">
-        connexion
-    </button>
-     <h2 class="h1-top">NOUVEAU CLIENT ?</h2>
-        <a class="btn btn-lg btn-primary" href="{{ path('app_register') }}">Créez un compte</a>
-
-    </div>
-    
-   </form>
+{% block title %}Log in!
 {% endblock %}
 
+{% block body %}
+	<form method="post">
+		{% if error %}
+			<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+		{% endif %}
+
+		{% if app.user %}
+			<div class="mb-3">
+				You are logged in as
+				{{ app.user.username }},
+				<a href="{{ path('app_logout') }}">Logout</a>
+			</div>
+		{% endif %}
+		<div class="container  loggin ">
+			<h1 class="h1-top">IDENTIFIEZ-VOUS :</h1>
+			<label for="inputEmail">Email</label>
+			<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+			<label for="inputPassword">Password</label>
+			<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+
+			<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+
+			<div class="checkbox mb-3 checkboxx">
+				<a href="{{ path("app_forgot_password_request")}}">Vous avez oublié votre mot de passe ?</a>
+				<label>
+					<input type="checkbox" name="_remember_me">
+					Rester connecté
+
+				</label>
+			</div>
+
+
+			<button class="btn btn-lg btn-primary" type="submit">
+				connexion
+			</button>
+			<h2 class="h1-top">NOUVEAU CLIENT ?</h2>
+			<a class="btn btn-lg btn-primary" href="{{ path('app_register') }}">Créez un compte</a>
+
+		</div>
+	</form>
+{% endblock %}
