--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -36,6 +36,9 @@
 
 				color: blue;
 			}
+			#fa-bag {
+				color: #fff;
+			}
 			html {
 				position: relative;
 				min-height: 100%;
@@ -46,6 +49,9 @@
 				bottom: -160px;
 				width: 100%;
 
+			}
+			.product_q {
+				gap: 30px;
 			}
 		</style>
 
