--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,34 +1,44 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Register
+{% endblock %}
 
 {% block body %}
-    {% for flashError in app.flashes('verify_email_error') %}
-        <div class="alert alert-danger" role="alert">{{ flashError }}</div>
-    {% endfor %}
-<div class="container register">
-    <h1 class="h1-top">CRÉATION DE COMPTE</h1>
+	{% for flashError in app.flashes('verify_email_error') %}
+		<div class="alert alert-danger" role="alert">{{ flashError }}</div>
+	{% endfor %}
+	<div class="container register">
+		<h1 class="h1-top">CRÉATION DE COMPTE</h1>
 
-         {{ form_start(registrationForm) }}
-         <br><br>
-        {{ form_widget(registrationForm.username) }}
-          <br><br>
-        {{ form_widget(registrationForm.lastname) }}
-          <br><br>
-        {{ form_widget(registrationForm.firstname) }} 
-          <br><br>
-        {{ form_widget(registrationForm.phone) }}
-          <br><br>
-        {{ form_widget(registrationForm.address) }}
-          <br><br>
-        {{ form_widget(registrationForm.email) }}
-          <br><br>
-        {{ form_widget(registrationForm.plainPassword) }} 
-          <br><br>
-        {# {{ form_row(registrationForm.agreeTerms) }} #}
-<div class="container_register_btn "><button type="submit" class="btn btn-primary register_btn btn-lg">VALIDER</button></div>
-        
-    {{ form_end(registrationForm) }}
-</div>
+		{{ form_start(registrationForm) }}
+		<br><br>
+		{{ form_widget(registrationForm.username) }}
+		<br><br>
+		{{ form_widget(registrationForm.lastname) }}
+		<br><br>
+		{{ form_widget(registrationForm.firstname) }}
+		<br><br>
+		{{ form_widget(registrationForm.phone) }}
+		<br><br>
+		{{ form_widget(registrationForm.email) }}
+		<br><br>
+		{{ form_widget(registrationForm.plainPassword) }}
+		<br><br>
+		{{ form_widget(registrationForm.town) }}
+		<br><br>
+		{{ form_widget(registrationForm.zip_code) }}
+		<br><br>
+		{{ form_widget(registrationForm.country) }}
+		<br><br>
+		{{ form_widget(registrationForm.address) }}
+		<br><br>
+
+		{# {{ form_row(registrationForm.agreeTerms) }} #}
+		<div class="container_register_btn ">
+			<button type="submit" class="btn btn-primary register_btn btn-lg">VALIDER</button>
+		</div>
+
+		{{ form_end(registrationForm) }}
+	</div>
 
 {% endblock %}
