--- a/templates/Partial/_footerBar.twig
+++ b/templates/Partial/_footerBar.twig
@@ -1,47 +1,116 @@
-<footer class="  bg-primary">
-	<ul class="nav justify-content-center border-bottom pb-3 mb-3 ">
+<style>
+	footer {
+		margin-top: auto;
+	}
+	footer .brand {
+		font-family: var(--lg-font);
+		letter-spacing: 2px;
+	}
+	footer a {
+		-webkit-transition: color 0.3s ease;
+		-o-transition: color 0.3s ease;
+		transition: color 0.3s ease;
+	}
+	@media only screen and(max-width: 600px) {
+		body {
+			background-color: red;
+		}
+	}
+</style>
 
-		<li class="nav-item">
-			<a href="#" class="nav-link px-2 text-muted">Home</a>
-		</li>
-		<li class="nav-item">
-			<a href="#" class="nav-link px-2 text-muted">Features</a>
-		</li>
-		<li class="nav-item">
-			<a href="#" class="nav-link px-2 text-muted">Pricing</a>
-		</li>
-		<li class="nav-item">
-			<a href="#" class="nav-link px-2 text-muted">FAQs</a>
-		</li>
-		<li class="nav-item">
-			<a href="#" class="nav-link px-2 text-muted">About</a>
-		</li>
-	</ul>
-	<div class="d-flex justify-content-between py-4 my-4 ">
-		<p>© 2021 Company, Inc. All rights reserved.</p>
-		<ul class="list-unstyled d-flex">
-			<li class="ms-3">
-				<a class="link-dark" href="#">
-					<i class="fa-brands fa-twitter fa-3x"></i>
+<footer class="bg-dark py-5">
+	<div class="container">
+		<div class="row text-white g-4">
+			<div class="col-md-6 col-lg-3">
+				<a class="text-uppercase text-decoration-none brand text-white" href="index.html">TechnforTechn</a>
+				<p class="text-white text-muted mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum mollitia quisquam veniam odit cupiditate, ullam aut voluptas velit dolor ipsam?</p>
+			</div>
 
+			<div class="col-md-6 col-lg-3">
+				<h5 class="fw-light">Links</h5>
+				<ul class="list-unstyled">
+					<li class="my-3">
+						<a href="#" class="text-white text-decoration-none text-muted">
+							<i class="fas fa-chevron-right me-1"></i>
+							Home
+						</a>
+					</li>
+					<li class="my-3">
+						<a href="#" class="text-white text-decoration-none text-muted">
+							<i class="fas fa-chevron-right me-1"></i>
+							Collection
+						</a>
+					</li>
+					<li class="my-3">
+						<a href="#" class="text-white text-decoration-none text-muted">
+							<i class="fas fa-chevron-right me-1"></i>
+							Blogs
+						</a>
+					</li>
+					<li class="my-3">
+						<a href="#" class="text-white text-decoration-none text-muted">
+							<i class="fas fa-chevron-right me-1"></i>
+							About Us
+						</a>
+					</li>
+				</ul>
+			</div>
 
-				</a>
-			</li>
-			<li class="ms-3">
-				<a class="link-dark" href="#">
-					<i class="fa-brands fa-instagram fa-3x"></i>
+			<div class="col-md-6 col-lg-3">
+				<h5 class="fw-light mb-3">Contact Us</h5>
+				<div class="d-flex justify-content-start align-items-start my-2 text-muted">
+					<span class="me-3">
+						<i class="fas fa-map-marked-alt"></i>
+					</span>
+					<span class="fw-light">
+						Albert Street, New York, AS 756, United States of America
+					</span>
+				</div>
+				<div class="d-flex justify-content-start align-items-start my-2 text-muted">
+					<span class="me-3">
+						<i class="fas fa-envelope"></i>
+					</span>
+					<span class="fw-light">
+						attire.support@gmail.com
+					</span>
+				</div>
+				<div class="d-flex justify-content-start align-items-start my-2 text-muted">
+					<span class="me-3">
+						<i class="fas fa-phone-alt"></i>
+					</span>
+					<span class="fw-light">
+						+9786 6776 236
+					</span>
+				</div>
+			</div>
 
-
-				</a>
-			</li>
-			<li class="ms-3">
-				<a class="link-dark" href="#">
-					<i class="fa-brands fa-facebook fa-3x"></i>
-
-				</a>
-			</li>
-		</ul>
+			<div class="col-md-6 col-lg-3">
+				<h5 class="fw-light mb-3">Follow Us</h5>
+				<div>
+					<ul class="list-unstyled d-flex">
+						<li>
+							<a href="#" class="text-white text-decoration-none text-muted fs-4 me-4">
+								<i class="fab fa-facebook-f"></i>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="text-white text-decoration-none text-muted fs-4 me-4">
+								<i class="fab fa-twitter"></i>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="text-white text-decoration-none text-muted fs-4 me-4">
+								<i class="fab fa-instagram"></i>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="text-white text-decoration-none text-muted fs-4 me-4">
+								<i class="fab fa-pinterest"></i>
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
 	</div>
-
-	<p class="text-center text-muted">© 2021 Company, Inc</p>
 </footer>
