--- a/templates/Partial/_navBar.twig
+++ b/templates/Partial/_navBar.twig
@@ -1,6 +1,8 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-2">
+<style></style>
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary py-1 fixed-top">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="{{ path("home")}}"><img src="/upload/Vert Foncé Diamant Technologie de Pointe Informatique Logo.png" alt="" style="width: 100px; height:100px"></a>
+		<a class="navbar-brand d-flex justify-content-between align-items-center order-lg-0" href="{{ path("home")}}"><img src="/upload/Vert Foncé Diamant Technologie de Pointe Informatique Logo.png" alt="" style="width: 100px; height:100px"></a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -38,8 +40,6 @@
 			<li class="nav-item">
 				<a class="nav-link  btn my-2 my-sm-0 text-black" href="{{ path('cart_index') }}">
 					<i class="fa-solid fa-bag-shopping fa-3x" id="fa-bag"></i>
-
-
 				</a>
 			</li>
 		</ul>
