--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,46 +12,18 @@
 		<link
 		href="/css/bootstrap.min.css" rel="stylesheet">
 		<!-- Custom CSS   -->
-		<link rel="stylesheet" href="/css/main.css">
+
 		<link rel="stylesheet" href="/css/product.css"> {% block stylesheets %}{% endblock %}
 		<style>
-			.grid {
-				display: grid;
-				grid-template-columns: repeat(5, 1fr);
-				grid-gap: 20px;
+			* {
+				margin: 0;
+				padding: 0;
+				box-sizing: border-box;
 			}
-			.filter {
-				display: block;
-				position: sticky;
-				top: 20px;
-			}
-			a,
-			a:hover {
-
-				color: black;
-
-				text-decoration: none; /* no underline */
-			}
-			.fa-bag-shopping {
-
-				color: blue;
-			}
-			#fa-bag {
-				color: #fff;
-			}
-			html {
-				position: relative;
-				min-height: 100%;
-			}
-
-			footer {
-				position: absolute;
-				bottom: -160px;
-				width: 100%;
-
-			}
-			.product_q {
-				gap: 30px;
+			body {
+				display: flex;
+				flex-direction: column;
+				min-height: 100vh;
 			}
 		</style>
 
@@ -62,8 +34,7 @@
 	<body>
 		{% include 'Partial/_navBar.twig' %}
 		{% block body %}{% endblock %}
-		{% include '/Partial/_footerBar.twig' %}
-
+		{% include 'Partial/_footerBar.twig' %}
 		<!-- Bootstrap JS -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
