--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,9 +4,13 @@
 {% endblock %}
 
 {% block body %}
+
+
 	{# hearder #}
-	<header id="header">
-		<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+	<header id="header" class=" carousel slide" data-bs-ride="carousel" style="padding-top: 104px;">
+
+		<div id="carouselExampleIndicators" class="carousel slide    " data-bs-ride="carousel">
+
 			<div class="carousel-indicators">
 				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
 				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -39,78 +43,63 @@
 			</button>
 		</div>
 	</header>
+	{# end of hearder #}
+	{#  cattegory collection #}
 	<main>
-		<h2 class="h1-top" style=" font-size: 2.5rem;">CATÉGORIES POPULAIRES</h2>
-		<section>
-
-			<div class="container d-flex justify-content-around align-items-center mt-5">
-
-
-				<div class="card" style="width: 18rem;">
-
-
-					<img src="/upload/images/products/LD0005869780_1.jpg" class="card-img-top" alt="...">
-
-					<div class="card-body text-center">
-						<h5 class="card-title fs-5 fw-bold">
-							<a href="http://">COMPOSANTS</a>
-
-
-						</h5>
-
+		<section id="collection" class="py-5">
+			<div class="container">
+				<div class="title text-center">
+					<h2 class="position-relative d-inline-block">CATÉGORIES POPULAIRES</h2>
+				</div>
+				<div class="row g-0">
+					<div class="collection-list mt-4 row gx-0 gy-3">
+						<div class="col-md-6 col-lg-4 col-xl-3 p-2 ">
+							<div class="collection-img position-relative">
+								<img src="/upload/images/products/LD0005869780_1.jpg" class="w-100">
+							</div>
+							<div class="text-center">
+								<p class="text-capitalize my-1">COMPOSANTS</p>
+							</div>
+						</div>
+						<div class="col-md-6 col-lg-4 col-xl-3 p-2 ">
+							<div class="collection-img position-relative">
+								<img src="/upload/images/products/LD0005776729_1.jpg" class="w-100">
+							</div>
+							<div class="text-center">
+								<p class="text-capitalize my-1">PÉRIPHÉRIQUES PC</p>
+							</div>
+						</div>
+						<div class="col-md-6 col-lg-4 col-xl-3 p-2 ">
+							<div class="collection-img position-relative">
+								<img src="/upload/images/products/LD0005871582_1.jpg" class="w-100">
+							</div>
+							<div class="text-center">
+								<p class="text-capitalize my-1">ORDINATEUR DE BUREAU</p>
+							</div>
+						</div>
 					</div>
 				</div>
-				<div class="card" style="width: 18rem;">
-
-					<img src="/upload/images/products/LD0005776729_1.jpg" class="card-img-top" alt="...">
-
-
-					<div class="card-body text-center">
-
-						<h5 class="card-title fs-5 fw-bold">
-							<a href="http://">PÉRIPHÉRIQUES PC</a>
-
-						</h5>
-
-
-					</div>
-				</div>
-				<div class="card" style="width: 18rem;">
-
-					<img src="/upload/images/products/LD0005871582_1.jpg" class="card-img-top" alt="...">
-
-
-					<div class="card-body text-center">
-
-						<h5 class="card-title fs-5 fw-bold">
-
-							<a href="http://">ORDINATEUR DE BUREAU</a>
-						</h5>
-
-
-					</div>
-				</div>
-
 			</div>
 		</section>
-		<h2 class="h1-top mt-5" style=" font-size: 2.5rem;">NOUVEAUTÉS</h2>
-		<section class="mb-5">
-
-
-			<div class="container ">
-
-				<div class="col-md-12 ">
-
-					<div class="grid mt-5 " style="width: 85rem;">
-
+		{#  end cattegory collection #}
+		{#  product collection #}
+		<section id="product" class="py-5">
+			<div class="container">
+				<div class="title text-center">
+					<h2 class="position-relative d-inline-block">NOS PRODUIRES</h2>
+				</div>
+				<div class="row g-0">
+					<div class="product-list mt-4 row gx-0 gy-3">
 
 						{% for product in products %}
 							{% include 'product/_card.html.twig' with {product:product} only%}
 						{% endfor %}
 					</div>
 				</div>
-
 			</div>
 		</section>
+		{#  end product collection #}
 	</main>
+
+
 {% endblock %}
