--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -4,41 +4,74 @@
 {% endblock %}
 
 {% block body %}
+	<style>
+		body {
+			background-color: #03a9f4;
+			height: 100%;
+		}
+
+		#register {
+			position: relative;
+			margin-top: 150px;
+			height: 100vh;
+			display: flex;
+			flex-direction: column;
+			gap: 5px;
+
+		}
+
+		@media(max-width: 990px) {
+			#connection {
+				position: relative;
+				margin-top: 150px;
+
+			}
+		}
+	</style>
 	{% for flashError in app.flashes('verify_email_error') %}
 		<div class="alert alert-danger" role="alert">{{ flashError }}</div>
 	{% endfor %}
-	<div class="container register">
-		<h1 class="h1-top">CRÉATION DE COMPTE</h1>
 
-		{{ form_start(registrationForm) }}
-		<br><br>
-		{{ form_widget(registrationForm.username) }}
-		<br><br>
-		{{ form_widget(registrationForm.lastname) }}
-		<br><br>
-		{{ form_widget(registrationForm.firstname) }}
-		<br><br>
-		{{ form_widget(registrationForm.phone) }}
-		<br><br>
-		{{ form_widget(registrationForm.email) }}
-		<br><br>
-		{{ form_widget(registrationForm.plainPassword) }}
-		<br><br>
-		{{ form_widget(registrationForm.town) }}
-		<br><br>
-		{{ form_widget(registrationForm.zip_code) }}
-		<br><br>
-		{{ form_widget(registrationForm.country) }}
-		<br><br>
-		{{ form_widget(registrationForm.address) }}
-		<br><br>
+	<section id="register" class="py-5">
+		<div class="container">
+			<div class="title text-center">
+				<h2 class="position-relative d-inline-block py-2">CRÉATION DE COMPTE</h2>
+			</div>
+			<div class="row g-0">
+				<div class="container register">
+					{{ form_start(registrationForm) }}
+					<br><br>
+					{{ form_widget(registrationForm.username) }}
 
-		{# {{ form_row(registrationForm.agreeTerms) }} #}
-		<div class="container_register_btn ">
-			<button type="submit" class="btn btn-primary register_btn btn-lg">VALIDER</button>
-		</div>
+					{{ form_widget(registrationForm.lastname) }}
 
-		{{ form_end(registrationForm) }}
-	</div>
+					{{ form_widget(registrationForm.firstname) }}
 
-{% endblock %}
+					{{ form_widget(registrationForm.phone) }}
+
+					{{ form_widget(registrationForm.address) }}
+
+					{{ form_widget(registrationForm.email) }}
+
+					{{ form_widget(registrationForm.plainPassword) }}
+
+					{{ form_widget(registrationForm.town) }}
+
+					{{ form_widget(registrationForm.zip_code) }}
+
+					{{ form_widget(registrationForm.country) }}
+
+
+					{# {{ form_row(registrationForm.agreeTerms) }} #}
+					<div class="container_register_btn ">
+						<button type="submit" class="btn btn-primary register_btn btn-lg">VALIDER</button>
+					</div>
+
+					{{ form_end(registrationForm) }}
+				</div>
+
+
+			</div>
+		</section>
+
+	{% endblock %}
