--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,43 +5,84 @@
 {% endblock %}
 
 {% block body %}
-	<form method="post">
-		{% if error %}
-			<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-		{% endif %}
+	<style>
+		body {
+			background-color: #03a9f4;
+			height: 100%;
+		}
+		#connection {
+			position: relative;
+			margin-top: auto;
+		}
+		.loggin {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			width: 60vh;
+			gap: 20px;
+			height: 500px;
+			background-color: #fff;
+			box-shadow: 10px 5px 5px 10px rgba(211, 211, 211, 0.2);
+			border-radius: 10px;
+		}
 
-		{% if app.user %}
-			<div class="mb-3">
-				You are logged in as
-				{{ app.user.username }},
-				<a href="{{ path('app_logout') }}">Logout</a>
+		@media(max-width: 990px) {
+			#connection {
+				position: relative;
+				margin-top: 150px;
+			}
+		}
+	</style>
+
+
+	<section id="connection" class="py-5">
+		<div class="container">
+			<div class="title text-center">
+				<h2 class="position-relative d-inline-block py-2">IDENTIFIEZ-VOUS</h2>
+
 			</div>
-		{% endif %}
-		<div class="container  loggin ">
-			<h1 class="h1-top">IDENTIFIEZ-VOUS :</h1>
-			<label for="inputEmail">Email</label>
-			<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-			<label for="inputPassword">Password</label>
-			<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+			<div class="row g-0">
+				<form method="post">
+					{% if error %}
+						<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+					{% endif %}
 
-			<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+					{% if app.user %}
+						<div class="mb-3">
+							You are logged in as
+							{{ app.user.username }},
+							<a href="{{ path('app_logout') }}">Logout</a>
+						</div>
+					{% endif %}
 
-			<div class="checkbox mb-3 checkboxx">
-				<a href="{{ path("app_forgot_password_request")}}">Vous avez oublié votre mot de passe ?</a>
-				<label>
-					<input type="checkbox" name="_remember_me">
-					Rester connecté
+					<div class="container  loggin ">
+						<h1 class="h1-top"></h1>
+						<label for="inputEmail">Email</label>
+						<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+						<label for="inputPassword">Password</label>
+						<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 
-				</label>
+						<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+
+						<div class="checkbox mb-3 checkboxx">
+							<a href="{{ path("app_forgot_password_request")}}">Vous avez oublié votre mot de passe ?</a>
+							<label>
+								<input type="checkbox" name="_remember_me">
+								Rester connecté
+
+							</label>
+						</div>
+
+
+						<button class="btn btn-lg btn-primary" type="submit">
+							connexion
+						</button>
+						<h2 class="h1-top">NOUVEAU CLIENT ?</h2>
+						<a class="btn btn-lg btn-primary" href="{{ path('app_register') }}">Créez un compte</a>
+
+					</div>
+				</form>
+
 			</div>
-
-
-			<button class="btn btn-lg btn-primary" type="submit">
-				connexion
-			</button>
-			<h2 class="h1-top">NOUVEAU CLIENT ?</h2>
-			<a class="btn btn-lg btn-primary" href="{{ path('app_register') }}">Créez un compte</a>
-
-		</div>
-	</form>
-{% endblock %}
+		</section>
+	{% endblock %}
