--- a/templates/Partial/_footerBar.twig
+++ b/templates/Partial/_footerBar.twig
@@ -18,16 +18,16 @@
 	}
 </style>
 
-<footer class="bg-dark py-5">
-	<div class="container">
-		<div class="row text-white g-4">
-			<div class="col-md-6 col-lg-3">
+<footer class="bg-dark py-1">
+	<div class="container-fluid">
+		<div class="row text-white g-2">
+			<div class="col-md-10 col-lg-2">
 				<a class="text-uppercase text-decoration-none brand text-white" href="index.html">TechnforTechn</a>
-				<p class="text-white text-muted mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum mollitia quisquam veniam odit cupiditate, ullam aut voluptas velit dolor ipsam?</p>
+				<p class="text-white text-muted mt-3">Lorem ipsum dolor
+				</p>
 			</div>
 
 			<div class="col-md-6 col-lg-3">
-				<h5 class="fw-light">Links</h5>
 				<ul class="list-unstyled">
 					<li class="my-3">
 						<a href="#" class="text-white text-decoration-none text-muted">
@@ -41,23 +41,10 @@
 							Collection
 						</a>
 					</li>
-					<li class="my-3">
-						<a href="#" class="text-white text-decoration-none text-muted">
-							<i class="fas fa-chevron-right me-1"></i>
-							Blogs
-						</a>
-					</li>
-					<li class="my-3">
-						<a href="#" class="text-white text-decoration-none text-muted">
-							<i class="fas fa-chevron-right me-1"></i>
-							About Us
-						</a>
-					</li>
 				</ul>
 			</div>
 
 			<div class="col-md-6 col-lg-3">
-				<h5 class="fw-light mb-3">Contact Us</h5>
 				<div class="d-flex justify-content-start align-items-start my-2 text-muted">
 					<span class="me-3">
 						<i class="fas fa-map-marked-alt"></i>
