--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,6 +5,7 @@
 		<meta charset="utf-8">
 		<meta
 		name="viewport" content="width=device-width, initial-scale=1">
+
 		<!-- foot  -->
 		<link
 		rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
@@ -12,7 +13,7 @@
 		<link
 		href="/css/bootstrap.min.css" rel="stylesheet">
 		<!-- Custom CSS   -->
-
+		<link rel="shortcut icon" href="{{ asset('upload/favicon.png') }}" type="image/x-icon">
 		<link rel="stylesheet" href="/css/product.css"> {% block stylesheets %}{% endblock %}
 		<style>
 			* {
