--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -87,6 +87,7 @@
 			<div class="container">
 				<div class="title text-center">
 					<h2 class="position-relative d-inline-block">NOS PRODUIRES</h2>
+					<a href="{{ path("product_index")}}" class="btn btn-primary ">Voir +</a>
 				</div>
 				<div class="row g-0">
 					<div class="product-list mt-4 row gx-0 gy-3">
