--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -9,14 +9,20 @@
 			background-color: #03a9f4;
 			height: 100%;
 		}
+		.container_register_btn {
+			display: flex;
+			justify-content: center;
+
+		}
 
 		#register {
 			position: relative;
 			margin-top: 150px;
 			height: 100vh;
 			display: flex;
+			gap: 2px;
 			flex-direction: column;
-			gap: 5px;
+
 
 		}
 
@@ -32,35 +38,35 @@
 		<div class="alert alert-danger" role="alert">{{ flashError }}</div>
 	{% endfor %}
 
-	<section id="register" class="py-5">
+	<section id="register">
 		<div class="container">
 			<div class="title text-center">
-				<h2 class="position-relative d-inline-block py-2">CRÉATION DE COMPTE</h2>
+				<h2 class="position-relative d-inline-block py-1">CRÉATION DE COMPTE</h2>
 			</div>
 			<div class="row g-0">
 				<div class="container register">
 					{{ form_start(registrationForm) }}
 					<br><br>
 					{{ form_widget(registrationForm.username) }}
-
+					<br>
 					{{ form_widget(registrationForm.lastname) }}
-
+					<br>
 					{{ form_widget(registrationForm.firstname) }}
-
+					<br>
 					{{ form_widget(registrationForm.phone) }}
-
+					<br>
 					{{ form_widget(registrationForm.address) }}
-
+					<br>
 					{{ form_widget(registrationForm.email) }}
-
+					<br>
 					{{ form_widget(registrationForm.plainPassword) }}
-
+					<br>
 					{{ form_widget(registrationForm.town) }}
-
-					{{ form_widget(registrationForm.zip_code) }}
-
+					<br>
+					{{ form_widget(registrationForm.zipCode) }}
+					<br>
 					{{ form_widget(registrationForm.country) }}
-
+					<br>
 
 					{# {{ form_row(registrationForm.agreeTerms) }} #}
 					<div class="container_register_btn ">
