--- a/templates/Partial/_footerBar.twig
+++ b/templates/Partial/_footerBar.twig
@@ -58,7 +58,7 @@
 						<i class="fas fa-envelope"></i>
 					</span>
 					<span class="fw-light">
-						attire.support@gmail.com
+						any.gouba@gmail.com
 					</span>
 				</div>
 				<div class="d-flex justify-content-start align-items-start my-2 text-muted">
@@ -66,7 +66,7 @@
 						<i class="fas fa-phone-alt"></i>
 					</span>
 					<span class="fw-light">
-						+9786 6776 236
+						+33 0766795523
 					</span>
 				</div>
 			</div>
