--- a/templates/reset_password/check_email.html.twig
+++ b/templates/reset_password/check_email.html.twig
@@ -1,13 +1,33 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Envoi du courriel de réinitialisation du mot de passe{% endblock %}
+{% block title %}Envoi du courriel de réinitialisation du mot de passe
+{% endblock %}
 
 {% block body %}
-<div class="container check-email">
- <p>
-        Un e-mail contenant un lien pour changer votre mot de pass vous a bien été envoyé à l'adresse e-mail de votre compte, vérifiez bien votre boite, ainsi que la section spams.
-    </p>
-    <p>Si vous ne recevez pas d'e-mail, vérifiez votre dossier de courrier indésirable (spam) ou  <a href="{{ path('app_forgot_password_request') }}">réessayer</a>.</p>
-</div>
-   
-{% endblock %}
+	<style>
+		body {
+			background-color: #03a9f4;
+			height: 100%;
+		}
+		#check-email {
+			margin-top: auto;
+			background-color: white;
+		}
+	</style>
+	<section id="check-email" class="py-5">
+		<div class="container">
+			<div class="title text-center">
+				<h2 class="position-relative d-inline-block py-2">RÉINITIALISATION DE MOT DE PASSE</h2>
+			</div>
+			<div class="row g-0">
+				<div class="container check-email">
+					<p>
+						Un e-mail contenant un lien pour changer votre mot de pass vous a bien été envoyé à l'adresse e-mail de votre compte, vérifiez bien votre boite, ainsi que la section spams.
+					</p>
+					<p>Si vous ne recevez pas d'e-mail, vérifiez votre dossier de courrier indésirable (spam) ou
+						<a href="{{ path('app_forgot_password_request') }}">réessayer</a>.</p>
+				</div>
+			</div>
+		</section>
+
+	{% endblock %}
