--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,10 +1,23 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!
+{% block title %}Techfortech High-Tech Pour-Tous
 {% endblock %}
 
 {% block body %}
+	<style>
+		.NPR {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			width: 100%;
+		}
+		.NPR2 {
+			position: relative;
+			left: 20%;
+			bottom: 15px;
 
+		}
+	</style>
 
 	{# hearder #}
 	<header id="header" class=" carousel slide" data-bs-ride="carousel" style="padding-top: 104px;">
@@ -85,9 +98,11 @@
 		{#  product collection #}
 		<section id="product" class="py-5">
 			<div class="container">
-				<div class="title text-center">
-					<h2 class="position-relative d-inline-block">NOS PRODUIRES</h2>
-					<a href="{{ path("product_index")}}" class="btn btn-primary ">Voir +</a>
+				<div class="title text-center NPR ">
+					<h2 class="position-relative d-inline-block">NOS PRODUITS</h2>
+					<div class=" NPR2">
+						<a href="{{ path("product_index")}}" class="btn btn-primary ">Voir +</a>
+					</div>
 				</div>
 				<div class="row g-0">
 					<div class="product-list mt-4 row gx-0 gy-3">
@@ -101,6 +116,5 @@
 		</section>
 		{#  end product collection #}
 	</main>
-
 
 {% endblock %}
