--- a/templates/reset_password/email.html.twig
+++ b/templates/reset_password/email.html.twig
@@ -1,9 +1,27 @@
-<h1>Bonjour!</h1>
+<section id="check-email" class="py-5">
+	<div class="container">
+		<div class="title text-center">
+			<img src="/upload/logo.png" alt="" style="width: 100px; height:100px">
+		</div>
+		<div class="row g-0">
+			<div class="container check-email">
+				<div class="title text-center">
+					<h1>Bonjour!</h1>
+				</div>
+				<p>Vous avez récemment fait la demande d'un nouveau mot de passe pour votre compte Techfortech.</p>
+				<div class="title text-center">
+					<p>Veuillez cliquer sur le lien suivant pour réinitialiser votre mot de passe :
+					</p>
+					<a class="btn btn-primary" href="{{ url('app_reset_password', {token: resetToken.token}) }}">{{ url('app_reset_password', {token: resetToken.token}) }}</a>
+					<p>Ce lien expirera dans
+						{{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}.</p>
+				</div>
+				<div class="title text-center">
 
-<p>Vous avez fait une demande pour changer le mot de pass de votre compte sur Techfortech. Si ce n'est pas vous qui avez fait cette demande, ignorez tout simplement cet e-mail. Afin de pouvoir changer votre mot de pass, vous devez vous rendre sur le lien suivant.</p>
+					<p>Si vous rencontrez des difficultés, veuillez contacter l'administrateur de l'espace membre.</p>
 
-<a href="{{ url('app_reset_password', {token: resetToken.token}) }}">{{ url('app_reset_password', {token: resetToken.token}) }}</a>
+				</div>
 
-<p>Ce lien expirera dans {{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}.</p>
-
-<p>Si vous rencontrez des difficultés, veuillez contacter l'administrateur de l'espace membre.</p>
+			</div>
+		</div>
+	</section>
