--- a/templates/product/_filter.html.twig
+++ b/templates/product/_filter.html.twig
@@ -1,27 +1,23 @@
-{{ form_start(form, {attr: {class: 'filter js-filter-form'}}) }}
+<section id="filter" class="py-5">
+	<div class="row g-0">
+		{{ form_start(form, {attr: {class: 'filter js-filter-form'}}) }}
+		{{ form_row(form.q) }}
+		<h4 style="font-weight:bold;font-size:1.5rem;" class="m-3">Catégories</h4>
+		{{ form_row(form.categories) }}
 
-<div class="spinner-border js-loading" role="status" aria-hidden="true" style="display: none">
-	<span class="sr-only">Loading...</span>
-</div>
+		<h4>Prix</h4>
+		<div class="row">
+			<div class="col-md-6">
+				{{ form_row(form.min) }}
+			</div>
+			<div class="col-md-6">
+				{{ form_row(form.max) }}
+			</div>
+		</div>
+		<h4>Promotions</h4>
+		{{ form_row(form.promo) }}
+		<button type="submit" class="btn btn-primary w-100">Filtrer</button>
 
-{{ form_row(form.q) }}
-
-<h4 style="font-weight:bold;font-size:1.5rem;" class="m-3">Catégories</h4>
-
-{{ form_row(form.categories) }}
-
-<h4>Prix</h4>
-<div class="row">
-	<div class="col-md-6">
-		{{ form_row(form.min) }}
+		{{ form_end(form) }}
 	</div>
-	<div class="col-md-6">
-		{{ form_row(form.max) }}
-	</div>
-</div>
-{# <h4>Promotions</h4>
-{{ form_row(form.promo) }} #}
-
-<button type="submit" class="btn btn-primary w-100">Filtrer</button>
-
-{{ form_end(form) }}
+</section>
