--- a/templates/Partial/_navBar.twig
+++ b/templates/Partial/_navBar.twig
@@ -1,4 +1,11 @@
-<style></style>
+<style>
+	.message {
+		z-index: 100;
+		position: absolute;
+		top: 150px;
+		width: 350px;
+	}
+</style>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary py-1 fixed-top">
 	<div class="container-fluid">
@@ -13,7 +20,11 @@
 					<a class="nav-link active btn btn-lg my-2 " href="{{ path('home') }}">Accueil
 					</a>
 				</li>
-
+				{% if is_granted("ROLE_USER") == true %}
+					<li class="nav-item">
+						<a class="nav-link btn btn-lg btn-info mt-2" href="{{ path('app_user') }}">Profil</a>
+					</li>
+				{% endif %}
 
 				{% if is_granted("ROLE_ADMIN") == true %}
 					<li class="nav-item">
@@ -21,34 +32,35 @@
 					</li>
 				{% endif %}
 			</ul>
+			<ul class="navbar-nav ms-auto">
 
-		</ul>
-		<ul class="navbar-nav ms-auto">
-
-			{% if is_granted("ROLE_USER") == true %}
+				{% if is_granted("ROLE_USER") == true %}
+					<li class="nav-item">
+						<a class="nav-link btn btn-lg btn-info mt-2" href="{{ path('app_logout') }}">Déconnexion</a>
+					</li>
+				{% endif %}
+				{% if is_granted("ROLE_USER") == false %}
+					<li class="nav-item">
+						<a class="nav-link  btn my-2 my-sm-0 text-black" href="{{ path('app_login') }}">
+							<i class="fa-solid fa-user-astronaut fa-3x"></i>
+						</a>
+					</li>
+				{% endif %}
 				<li class="nav-item">
-					<a class="nav-link btn btn-lg btn-info mt-2" href="{{ path('app_logout') }}">Déconnexion</a>
-				</li>
-			{% endif %}
-			{% if is_granted("ROLE_USER") == false %}
-				<li class="nav-item">
-					<a class="nav-link  btn my-2 my-sm-0 text-black" href="{{ path('app_login') }}">
-						<i class="fa-solid fa-user-astronaut fa-3x"></i>
+					<a class="nav-link  btn my-2 my-sm-0 text-black" href="{{ path('cart_index') }}">
+						<i class="fa-solid fa-bag-shopping fa-3x" id="fa-bag"></i>
 					</a>
 				</li>
-			{% endif %}
-			<li class="nav-item">
-				<a class="nav-link  btn my-2 my-sm-0 text-black" href="{{ path('cart_index') }}">
-					<i class="fa-solid fa-bag-shopping fa-3x" id="fa-bag"></i>
-				</a>
-			</li>
-		</ul>
-	</div>
-</div></nav><div class="container">
-{% for classStyle,messages in app.flashes %}
-	{% for message in messages %}
-		<div class="alert alert-{{classStyle}}" role="alert">
-			<p class="mb-0">{{ message }}</p>
+			</ul>
 		</div>
+	</div>
+</nav>
+<div class="container message">
+	{% for classStyle,messages in app.flashes %}
+		{% for message in messages %}
+			<div class="alert alert-{{classStyle}}" role="alert">
+				<p class="mb-0">{{ message }}</p>
+			</div>
+		{% endfor %}
 	{% endfor %}
-{% endfor %}</div>
+</div>
