--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -90,6 +90,14 @@
 								<p class="text-capitalize my-1">ORDINATEUR DE BUREAU</p>
 							</div>
 						</div>
+						<div class="col-md-6 col-lg-4 col-xl-3 p-2 ">
+							<div class="collection-img position-relative">
+								<img src="/upload/images/products/LD0005869780_1.jpg" class="w-100">
+							</div>
+							<div class="text-center">
+								<p class="text-capitalize my-1">SERVICE</p>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
