--- a/templates/product/_cardTable.html.twig
+++ b/templates/product/_cardTable.html.twig
@@ -1,19 +1,23 @@
 <style>
 	.img_filter {
-		height: 100px;
-		width: 100px;
+		height: 50px;
+		width: 50px;
+	}
+	.table {
+		width: 500px;
 	}
 </style>
-
-<table class="table">
-	<tbody>
-		<tr>
-			<td><img src="/upload/images/products/{{product.file}}" class="img_filter"/></td>
-			<td>{{product.name}}</td>
-			<td>{{product.price | price}}</td>
-			<td class="text-center">
-				<a href="{{path('cart_add',{'id': product.id} )}}" class="btn btn-primary mt-3">Add to Cart</a>
-			</td>
-		</tr>
-	</tbody>
-</table>
+<div class="row ">
+	<table class="table">
+		<tbody>
+			<tr>
+				<td><img src="/upload/images/products/{{product.file}}" class="img_filter"/></td>
+				<td>{{product.name}}</td>
+				<td>{{product.price | price}}</td>
+				<td class="text-center">
+					<a href="{{path('cart_add',{'id': product.id} )}}" class="btn btn-primary mt-3">Add to Cart</a>
+				</td>
+			</tr>
+		</tbody>
+	</table>
+</div>
