--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -1,36 +1,47 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-	<div class="container d-flex justify-content-arround align-items-center">
+	<style>
+		#item_tiem {
+			margin-top: 150px;
+		}
+	</style>
 
+	<section id="item_tiem">
 		<div class="container">
-			<h1 class="">{{product.name}}</h1>
-			<img src="/upload/images/products/{{product.file}}" style="width:300px;height: 300px;" alt="" class="card-img-top">
+			<div class="row g-0">
+				<div class="container d-flex justify-content-arround align-items-center ">
+					<div class="container">
+						<h1 class="text-center">{{product.name}}</h1>
+						<img src="/upload/images/products/{{product.file}}" style="width:300px;height: 300px;" alt="" class="card-img-top">
+					</div>
+					<div class="container">
+						<div class="conatiner">
+							<h1 class="">{{product.price/100 | number_format(0, ',', '')}}
+								€</h1>
+							<a href="{{path('cart_add',{'id': product.id})}}" class="btn btn-primary ">
+								AJOUTER AU PANIER</a>
 
-		</div>
+						</div>
+					</div>
+				</div>
+				<nav>
+					<div class="nav nav-tabs" id="nav-tab" role="tablist">
+						<button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">DESCRIPTIF</button>
 
-		<div class="container">
-			<div class="conatiner">
-				<h1 class="">{{product.price/100 | number_format(0, ',', '')}}
-					€</h1>
-				<a href="{{path('cart_add',{'id': product.id})}}" class="btn btn-primary ">
-					AJOUTER AU PANIER</a>
+						<button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">AVIS CLIENT</button>
+					</div>
+				</nav>
+				<div class="tab-content" id="nav-tabContent">
+					<div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+						<p>
+							{{product.description}}
+						</p>
+					</div>
+					<div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">...</div>
+				</div>
 
 			</div>
-		</div>
-	</div>
-	<nav>
-		<div class="nav nav-tabs" id="nav-tab" role="tablist">
-			<button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">DESCRIPTIF</button>
+		</section>
 
-			<button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Profile</button>
-			<button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Contact</button>
-		</div>
-	</nav>
-	<div class="tab-content" id="nav-tabContent">
-		<div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">...</div>
-		<div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">...</div>
-		<div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">...</div>
-	</div>
-
-{% endblock %}
+	{% endblock %}
